...
    
    func color(for award: Award) -> Color {
        dataController.hasEarned(award: award) ? Color(award.color) : .secondary.opacity(0.5)
    }
    
    func label(for award: Award) -> LocalizedStringKey {
        dataController.hasEarned(award: award) ? "unlocked: \(award.name)" : "Locked"
    }
    
    var awardTitle: LocalizedStringKey {
        if dataController.hasEarned(award: selectedAward) {
            return "Unlocked: \(selectedAward.name)"
        } else {
...
